@startuml
'https://plantuml.com/class-diagram

!include lexakai.theme

title "Resource Tools"

top to bottom direction

package fiasco.tools
{
    interface Tool
}

package fiasco.tools.resource
{
    interface ResourceTool
    ResourceTool -l-|> Tool
}

package fiasco.tools.repository
{
    interface RepositoryTool
    RepositoryTool -u-|> ResourceTool

    class Librarian
    class LibraryCache
    interface Repository

    Librarian -u-|> RepositoryTool
    Librarian -r-> LibraryCache
    Librarian -l-> Repository
}

@enduml
